@@ -4,17 +4,18 @@
 #
 #############################################################
 
-SYSSTAT_VERSION = 9.1.5
+SYSSTAT_VERSION = 9.1.6
 SYSSTAT_SOURCE = sysstat-$(SYSSTAT_VERSION).tar.bz2
 SYSSTAT_SITE = http://pagesperso-orange.fr/sebastien.godard/
-SYSSTAT_AUTORECONF = NO
-SYSSTAT_LIBTOOL_PATCH = NO
-SYSSTAT_INSTALL_STAGING = NO
-SYSSTAT_INSTALL_TARGET = YES
 
 SYSSTAT_CONF_OPT = --disable-man-group
 ifneq ($(BR2_HAVE_DOCUMENTATION),y)
 SYSSTAT_CONF_OPT += --disable-documentation
+endif
+
+ifeq ($(BR2_NEEDS_GETTEXT_IF_LOCALE),y)
+SYSSTAT_DEPENDENCIES += gettext libintl
+SYSSTAT_MAKE_OPT += CFLAGS+=-lintl
 endif
 
 # The isag tool is a post processing script that depends on tcl/tk
